--- a/css-basics_button-styles/css/styles.css
+++ b/css-basics_button-styles/css/styles.css
@@ -39,7 +39,6 @@ button {
   display: inline-block;
   font-size: 20px;
   border-radius: 30px;
-  /*Style me! Change my border, set a border radius or what you want to try out. :) */
 }
 
 .button1:hover {
@@ -48,7 +47,15 @@ button {
 }
 
 .button2 {
-  /*Style me! Change my color, or my background-color. Or both! You can test out different color modes here - like HEX, RGB, ... */
+  background-image: url("../images/pool.png");
+  border: none;
+  color: deeppink;
+  font-size: 10px;
+  width: 200px;
+  height: 50px;
+  font-size: 15px;
+  font-weight: 800;
+  font-style: oblique;
 }
 
 .button3 {
