changed 3rd button

--- a/css-basics_button-styles/css/styles.css
+++ b/css-basics_button-styles/css/styles.css
@@ -59,6 +59,9 @@ button {
 }
 
 .button3 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: medium;
+}
   /*Style me! You can test out changing the font, or font size, ...*/
 }
 
